--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="action_settings">Settings</string>
     <string name="main_txt_title">Tap button below to fetch some eats.</string>
     <string name="title_activity_detail_map">DetailMapActivity</string>
-    <string name="title_activity_maps">Current Place Details</string>
+    <string name="title_food_choices"></string>
     <string name="default_info_title">Default Location</string>
     <string name="default_info_snippet">No places found, because location permission is disabled.</string>
     <string name="progess_dialog_text">Finding you some eats…</string>
