--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,9 @@
     <string name="request_location"><![CDATA[Location permission should to be granted to use this app. Otherwise we can only use with a default location. You can go into Device settings->App->This app-> and Permissions to allow location requests.]]></string>
     <string name="permission_request_title">Permission Request</string>
     <string name="location_not_enabled_dialog_message">Location is not enabled. If location isn\'t turned on, the default location or last known location will be used for demo.</string>
+    <string name="movie_db_api_key">195a26f1bfab3bd8e980f46ff539f677</string>
+    <string name="client_id">"gQy70Nnii0ZWnS-LfcwiPg"</string>
+    <string name="client_secret">SVq93NKM4nKfU8NLEzcFkCottzAGEJ0c63i2tNcHOloqWgQX6jFVwy7vyV9hQlZB</string>
+    <string name="yelp_api_key">"AIzaSyDavakwBMruXB53FhwPskU-YmAaQju-ql4"</string>
+
 </resources>
