--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,15 +3,14 @@
     <string name="action_settings">Settings</string>
     <string name="main_txt_title">Tap button below to fetch some eats.</string>
     <string name="title_activity_detail_map">DetailMapActivity</string>
-    <string name="title_food_choices"></string>
+    <string name="title_food_choices">Food choices</string>
     <string name="default_info_title">Default Location</string>
     <string name="default_info_snippet">No places found, because location permission is disabled.</string>
     <string name="progess_dialog_text">Finding you some eats…</string>
     <string name="find_food_button">Find me food!</string>
     <string name="distance">Maximum distance?</string>
-    <string name="min_stars">Minimum stars?</string>
-    <string name="min_rating">Minimum rating?</string>
-    <string name="max_price">How many $ signs?</string>
+    <string name="min_stars">Minimum # stars?</string>
+    <string name="max_price">Max $ signs?</string>
     <string name="client_id">gQy70Nnii0ZWnS-LfcwiPg</string>
     <string name="client_secret">SVq93NKM4nKfU8NLEzcFkCottzAGEJ0c63i2tNcHOloqWgQX6jFVwy7vyV9hQlZB</string>
     <string name="yelp_api_key">AIzaSyDavakwBMruXB53FhwPskU-YmAaQju-ql4</string>
