--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="default_info_snippet">No places found, because location permission is disabled.</string>
     <string name="progess_dialog_text">Finding you some eats…</string>
     <string name="find_food_button">Find me food!</string>
+    <string name="navigate_me">Navigate me!</string>
     <string name="distance">Maximum distance?</string>
     <string name="min_stars">Minimum # stars?</string>
     <string name="max_price">Max $ signs?</string>
