--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="client_id">gQy70Nnii0ZWnS-LfcwiPg</string>
     <string name="client_secret">SVq93NKM4nKfU8NLEzcFkCottzAGEJ0c63i2tNcHOloqWgQX6jFVwy7vyV9hQlZB</string>
     <string name="yelp_api_key">AIzaSyDavakwBMruXB53FhwPskU-YmAaQju-ql4</string>
+    <string name="movie_db_api_key">195a26f1bfab3bd8e980f46ff539f677</string>
 
     <string name="setting_none">Sorry, no settings on free app.</string>
     <string name="alert_dialog_ok">OK</string>
@@ -23,21 +24,14 @@
     <string name="request_location"><![CDATA[Location permission should to be granted to use this app. Otherwise we can only use with a default location. You can go into Device settings->App->This app-> and Permissions to allow location requests.]]></string>
     <string name="permission_request_title">Permission Request</string>
     <string name="location_not_enabled_dialog_message">Location is not enabled. If location isn\'t turned on, the default location or last known location will be used for demo.</string>
-<<<<<<< HEAD
-    <string name="movie_db_api_key">195a26f1bfab3bd8e980f46ff539f677</string>
-    <string name="client_id">"gQy70Nnii0ZWnS-LfcwiPg"</string>
-    <string name="client_secret">SVq93NKM4nKfU8NLEzcFkCottzAGEJ0c63i2tNcHOloqWgQX6jFVwy7vyV9hQlZB</string>
-    <string name="yelp_api_key">"AIzaSyDavakwBMruXB53FhwPskU-YmAaQju-ql4"</string>
 
-=======
     <string name="no_network_connection">There is no network connection.</string>
     <string name="no_businesses_found">We could not find any businesses nearby you</string>
     <string name="no_data_received">We could not get data:</string>
-    <string name="using_default_location">Could not get location...searching in San Diego...</string>
+    <string name="using_default_location">Could not get location…searching in San Diego…</string>
     <string name="finding_food_notification">Finding you some eats…</string>
     <string name="netflix_construction">Netflix portion under construction</string>
     <string name="finished_picking">Congratulations!</string>
     <string name="remove_two_more">Remove two more</string>
     <string name="swipe_two">Swipe away two options</string>
->>>>>>> master
 </resources>
