--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,20 +2,37 @@
     <string name="app_name">Date Night!</string>
     <string name="action_settings">Settings</string>
     <string name="main_txt_title">Tap button below to fetch some eats.</string>
-    <string name="title_activity_detail_map">DetailMapActivity</string>
     <string name="title_food_choices">Food choices</string>
     <string name="default_info_title">Default Location</string>
     <string name="default_info_snippet">No places found, because location permission is disabled.</string>
     <string name="progess_dialog_text">Finding you some eats…</string>
     <string name="find_food_button">Find me food!</string>
     <string name="navigate_me">Navigate me!</string>
-    <string name="distance">Maximum distance?</string>
-    <string name="min_stars">Minimum # stars?</string>
+    <string name="distance">Max distance(in miles)?</string>
+    <string name="min_stars">Min # stars?</string>
     <string name="max_price">Max $ signs?</string>
-    <string name="client_id">gQy70Nnii0ZWnS-LfcwiPg</string>
-    <string name="client_secret">SVq93NKM4nKfU8NLEzcFkCottzAGEJ0c63i2tNcHOloqWgQX6jFVwy7vyV9hQlZB</string>
     <string name="yelp_api_key">AIzaSyDavakwBMruXB53FhwPskU-YmAaQju-ql4</string>
-
+    <string-array name="distance_options">
+        <item>1</item>
+        <item>2</item>
+        <item>5</item>
+        <item>10</item>
+        <item>20</item>
+    </string-array>
+    <string-array name="price_options">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+    </string-array>
+    <string-array name="stars_options">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+    </string-array>
     <string name="setting_none">Sorry, no settings on free app.</string>
     <string name="alert_dialog_ok">OK</string>
     <string name="alert_dialog_cancel">Cancel</string>
